--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
           parcial: "-",
           recuperatorio: "-",
           final: "-",
-          profesores: "German Bollman",
-          email: "-",
+          profesores: "German Bollman y Marcelo Cipriano",
+          email: "germanbolllmann@uca.edu.ar y marcelocipriano@uca.edu.ar",
           campus: "https://eva.uca.edu.ar/course/view.php?id=16083" ,
           aula: "LIR B",
           comentarios: [],
