--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           recuperatorio: "-",
           final: "-",
           profesores: "German Bollman y Marcelo Cipriano",
-          email: "germanbolllmann@uca.edu.ar y marcelocipriano@uca.edu.ar",
+          email: "germanbollmann@uca.edu.ar y marcelocipriano@uca.edu.ar",
           campus: "https://eva.uca.edu.ar/course/view.php?id=16083" ,
           aula: "LIR B",
           comentarios: [],
@@ -395,7 +395,7 @@
           recuperatorio: "-",
           final: "-",
           profesores: "German Bollman",
-          email: "-",
+          email: "germanbollmann@uca.edu.ar",
           campus: "https://eva.uca.edu.ar/course/view.php?id=24209" ,
           aula: "109 Magno",
           comentarios: [],
