--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
 
     <!-- Scripts -->
     <script type="module" src="firebase-config.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
