--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
           profesores: "Jorge Nahas",
           email: "-",
           campus: "https://eva.uca.edu.ar/course/view.php?id=23924" ,
-          aula: "220 San José",
+          aula: "358 Moro",
           comentarios: [],
           tareas: []
         },
