--- a/index.html
+++ b/index.html
@@ -414,11 +414,11 @@
           tareas: []
         },
         "Proyecto Integral de Desarrollo": {
-          horario: "Jueves 18:00 - 23:00",
+          horario: "Jueves 18:45 - 23:00",
           parcial: "-",
           recuperatorio: "-",
           final: "-",
-          profesores: "Jorge Nahas",
+          profesores: "Jorge Nahas, Hernan Mariño, Francisco De Grandis, +1",
           email: "-",
           campus: "https://eva.uca.edu.ar/course/view.php?id=23924" ,
           aula: "358 Moro",
