--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         },
         "Proyecto Integral de Desarrollo": {
           horario: "Jueves 18:45 - 23:00",
-          parcial: "-",
+          parcial: "TP de entrega continua",
           recuperatorio: "-",
           final: "-",
           profesores: "Jorge Nahas, Hernan Mariño, Francisco De Grandis, +1",
