--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           parcial: "-",
           recuperatorio: "-",
           final: "-",
-          profesores: "Liliana Radicce",
+          profesores: "Liliana Radice",
           email: "-",
           campus: "https://eva.uca.edu.ar/course/view.php?id=24230" ,
           aula: "S0B Moro (auditorio)",
@@ -426,12 +426,12 @@
           tareas: []
         },
         "Economía de la Empresa": {
-          horario: "Viernes 18:00 - 23:00",
+          horario: "Viernes 16:45 - 22:00",
           parcial: "25 de Octubre",
           recuperatorio: "29 de Noviembre (chequear)",
           final: "-",
-          profesores: "Alejandro",
-          email: "-",
+          profesores: "Alejandro L. Alonso",
+          email: "uca_finanzas@uca.edu.ar",
           campus: "https://eva.uca.edu.ar/course/view.php?id=23680" ,
           aula: "217 San José",
           comentarios: [],
