--- a/index.html
+++ b/index.html
@@ -298,10 +298,7 @@
             </tr>
             <tr>
                 <td>22:00 - 23:00</td>
-                <td><button class="btn materia-2" onclick="showInfo('Seguridad Informática y Criptografía')">Seguridad Informática y Criptografía</button></td>
-                <td><button class="btn materia-3" onclick="showInfo('Auditoría Informática')">Auditoría Informática</button></td>
-                <td><button class="btn materia-4" onclick="showInfo('Gerenciamiento y Evaluación de Proyectos')">Gerenciamiento y Evaluación de Proyectos</button></td>
-                <td><button class="btn materia-5" onclick="showInfo('Proyecto Integral de Desarrollo')">Proyecto Integral de Desarrollo</button></td>
+                <td class="empty-cell"></td><td class="empty-cell"></td><td class="empty-cell"></td><td class="empty-cell"></td>
                 <td class="empty-cell"></td>
             </tr>
         </table>
